--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <script src="https://telegram.org/js/telegram-web-app.js?2"></script>
-<iframe height="100%" width="100%" frameborder="0" src="https://itch.io/embed-upload/8543761?color=db3f3f"  ><a href="https://yoshimaru4.itch.io/flagsdayclicker">Play FlagsDayClicker on itch.io</a></iframe>
+<iframe height="500" width="240" frameborder="0" src="https://itch.io/embed-upload/8543761?color=db3f3f"  ><a href="https://yoshimaru4.itch.io/flagsdayclicker">Play FlagsDayClicker on itch.io</a></iframe>
