--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <script src="https://telegram.org/js/telegram-web-app.js?2"></script>
-<iframe height="95%" width="100%" frameborder="0" src="https://itch.io/embed-upload/8543761?color=db3f3f" , allowfullscreen ><a href="https://yoshimaru4.itch.io/flagsdayclicker"></a></iframe>
+<iframe height="95%" width="100%" frameborder="0" src="https://itch.io/embed-upload/8543761?color=db3f3f" allowfullscreen ><a href="https://yoshimaru4.itch.io/flagsdayclicker"></a></iframe>
